Adicionado a Section de Experiencia

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,13 +12,40 @@
         <header class="header">
 
             <div class="header-info">
-                <h3>Arena Games</h3>
-                <h4>Bem vindo a Arena Games!</h4>
+                <h3>Olá, eu sou o Hector Góes</h3>
+                <h4>Apenas um apaixonado por computação!</h4>
                 <button type="button" class="btn"> 
-                    <a href="#"> Arena CS GO </a>
+                    <a href="#"> Experiências </a>
                 </button>
             </div>
 
         </header>
+
+        <section class="section experience-sec">
+            <div class="section-header">Linguagens e Framerworks</div>
+            <div class="experience-container">
+                <div class="experience-item">
+                    <span class="item-logo">
+                        <img src="../img/html5.svg">
+                    </span>
+                    <span class="item-name">HTML</span>
+                </div>
+
+                <div class="experience-item">
+                    <span class="item-logo">
+                        <img src="../img/css-3.svg">
+                    </span>
+                    <span class="item-name">CSS</span>
+                </div>
+
+                <div class="experience-item">
+                    <span class="item-logo">
+                        <img src="../img/javascript.svg">
+                    </span>
+                    <span class="item-name">JavaScript</span>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
+
