--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" 
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+        
         <link rel="stylesheet" href="/css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
@@ -15,7 +19,7 @@
                 <h3>Olá, eu sou o Hector Góes</h3>
                 <h4>Apenas um apaixonado por computação!</h4>
                 <button type="button" class="btn"> 
-                    <a href="#experience"> Experiências </a>
+                    <a class="btn-a" href="#experience"> Experiências </a>
                 </button>
             </div>
 
@@ -61,8 +65,36 @@
                     <button type="submit" class="btn">Enviar</button>
                 </form>
             </div>
-
         </section>
+
+        <footer class="footer">
+            <ul class="social-list">
+                <li class="list-item">
+                    <a class="item-link" href="https://www.facebook.com/hector.goes">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                </li>
+
+                <li class="list-item">
+                    <a class="item-link" href="https://www.instagram.com/hector.goes/">
+                        <i class="fab fa-instagram-square"></i>
+                    </a>
+                    
+                </li>
+
+                <li class="list-item">
+                    <a class="item-link" href="https://www.linkedin.com/in/hectorgoes/">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+
+                <li class="list-item">
+                    <a class="item-link" href="https://github.com/HectorGoes">
+                        <i class="fab fa-github-square"></i>
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
 
